--- a/NotesSpringApp/pom.xml
+++ b/NotesSpringApp/pom.xml
@@ -41,11 +41,20 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-jasper -->
+		
 <dependency>
     <groupId>org.apache.tomcat</groupId>
     <artifactId>tomcat-jasper</artifactId>
     <version>10.1.8</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf -->
+<dependency>
+    <groupId>org.thymeleaf</groupId>
+    <artifactId>thymeleaf</artifactId>
+    <version>3.1.1.RELEASE</version>
+</dependency>
+
+
 
 	</dependencies>
 
